--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -11,12 +11,21 @@
           <li>Snippet Editing</li>
       </ul>
     ]]></description>
-    <version>1.0</version>
+    <version>1.0.1</version>
     <vendor email="linux_china@hotmail.com" url="http://snippet.mvnsearch.org"
             logo="/org/mvnsearch/snippet/plugin/icons/logo.png">linux_china
     </vendor>
     <idea-version since-build="8000"/>
-
+    <change-notes>
+        <![CDATA[
+              <ul>Change List in 1.0.1
+                      <li>Compiled by Jdk 1.5</li>
+              </ul>
+              <ul>Change List in 1.0
+                      <li>Initial Version</li>
+              </ul>
+            ]]>
+    </change-notes>
     <actions>
         <action id="InsertSnippetFragmentAction"
                 class="org.mvnsearch.snippet.plugin.actions.InsertSnippetFragmentAction"
