--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -11,13 +11,19 @@
           <li>Snippet Editing</li>
       </ul>
     ]]></description>
-    <version>1.0.1</version>
+    <version>1.1</version>
     <vendor email="linux_china@hotmail.com" url="http://snippet.mvnsearch.org"
             logo="/org/mvnsearch/snippet/plugin/icons/logo.png">linux_china
     </vendor>
     <idea-version since-build="8000"/>
     <change-notes>
         <![CDATA[
+            <ul>Change List in 1.1
+                      <li>Syntax color high light introduced by jsyntaxpane</li>
+                      <li>Fix DZone snippet repository query logic</li>
+                      <li>Fix regexlib.com snippet repository query logic</li>
+                      <li>Minor bug fix</li>
+              </ul>
               <ul>Change List in 1.0.1
                       <li>Compiled by Jdk 1.5</li>
               </ul>
