--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -12,13 +12,19 @@
           <li>Snippet Editing</li>
       </ul>
     ]]></description>
-    <version>1.1.2</version>
+    <version>1.2</version>
     <vendor email="linux_china@hotmail.com" url="http://snippet.mvnsearch.org"
             logo="/org/mvnsearch/snippet/plugin/icons/logo.png">linux_china
     </vendor>
-    <idea-version since-build="8000"/>
+    <idea-version since-build="9677"/>
     <change-notes>
         <![CDATA[
+        <ul>Change List in 1.2
+            <li>EAP 8.1 Build</li>
+            <li>Bug fix for DZone snippet search</li>
+            <li>Bug fix for completion</li>
+            <li>Remove word selection for completion</li>
+        </ul>
         <ul>Change List in 1.1.2
             <li>Bug fix for class cast exception</li>
         </ul>
@@ -37,7 +43,8 @@
             <li>Compiled by Jdk 1.5</li>
         </ul>
         <ul>Change List in 1.0
-            <li>Initial Version</li>
+            <li>Initial Version
+            </li>
         </ul>
             ]]>
     </change-notes>
