--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -12,7 +12,7 @@
           <li>Snippet Editing</li>
       </ul>
     ]]></description>
-    <version>1.3</version>
+    <version>1.3.1</version>
     <vendor email="linux_china@hotmail.com" url="http://snippet.mvnsearch.org"
             logo="/org/mvnsearch/snippet/plugin/icons/logo.png">linux_china
     </vendor>
@@ -20,6 +20,9 @@
     <idea-version since-build="9677"/>
     <change-notes>
         <![CDATA[
+        <ul>Change List in 1.3.1
+            <li>Bug fix for file fragment creation</li>
+        </ul>
         <ul>Change List in 1.3
             <li>Add RubyMine suport</li>
             <li>Mvnsearch URL Switch only one setting</li>
