--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,7 +17,7 @@
             logo="/org/mvnsearch/snippet/plugin/icons/logo.png">linux_china
     </vendor>
     <!--<depends>com.intellij.modules.lang</depends>-->
-    <idea-version since-build="9677"/>
+    <idea-version since-build="9677" until-build="10700"/>
     <change-notes>
         <![CDATA[
         <ul>Change List in 1.3.1
