--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -12,14 +12,17 @@
           <li>Snippet Editing</li>
       </ul>
     ]]></description>
-    <version>1.3.1</version>
+    <version>1.4.0</version>
     <vendor email="linux_china@hotmail.com" url="http://snippet.mvnsearch.org"
             logo="/org/mvnsearch/snippet/plugin/icons/logo.png">linux_china
     </vendor>
     <!--<depends>com.intellij.modules.lang</depends>-->
-    <idea-version since-build="9677"/>
+    <idea-version since-build="9999"/>
     <change-notes>
         <![CDATA[
+        <ul>Change list in 1.4.0
+            <li>Bug fix for IDEA 9.0</li>
+        </ul>
         <ul>Change List in 1.3.1
             <li>Bug fix for file fragment creation</li>
         </ul>
