--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -22,6 +22,7 @@
         <![CDATA[
         <ul>Change list in 1.4.0
             <li>Bug fix for IDEA 9.0</li>
+            <li>Icon support for popup items</li>
         </ul>
         <ul>Change List in 1.3.1
             <li>Bug fix for file fragment creation</li>
